--- a/Crop_Monitoring_System-Backend/src/main/resources/application.properties
+++ b/Crop_Monitoring_System-Backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Crop_Monitoring_System-Backend
-server.servlet.context-path=/cms
+server.servlet.context-path=/greenShadow
 
 server.port=8080
 
